# django-modelforms

./: .coveragerc  .coveralls.yml  .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  publish.yml
modelforms/: __init__.py  forms.py  mixins.py  views.py
tests/: models.py  settings.py  tests.py  urls.py  views.py
tests/templates/tests/: book_form.html
