[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "django-modelforms"
dynamic = ["version"]
description = "Improvements to django.forms.ModelForm - validates unique_together and UniqueConstraint"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "Touch Technology Pty Ltd", email = "info@touchtechnology.com.au" },
]
maintainers = [
    { name = "Gary Reynolds", email = "gary.reynolds@touchtechnology.com.au" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "django>=4.2",
]

[project.urls]
Homepage = "https://github.com/goodtune/django-modelforms"
Repository = "https://github.com/goodtune/django-modelforms"
Issues = "https://github.com/goodtune/django-modelforms/issues"

[tool.setuptools.packages.find]
include = ["modelforms*"]

[tool.setuptools_scm]
version_file = "modelforms/_version.py"

[tool.coverage.run]
source = ["modelforms"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["tests.py", "test_*.py"]
